--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,14 @@ spring:
       mysql:
         #刷新空闲时间
         usePingMethod : false
-
+      redis:
+        host: localhost
+        port: 6379
+        password: 123456
+        database: 0
+      cache:
+        redis:
+          time-to-live: 1800000
 mybatis-plus:
   configuration:
     #在映射实体或者属性时，将数据库中表名和字段名中的下划线去掉，按照驼峰命名法映射
